2006-01-17	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Cleaned some code
	* Removed some old/temporary functions

2005-11-18	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added tl880_{mk,rm}dev scripts to driver/

2005-11-16	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Consolidated the mmap functions and device file operations info.

2005-11-15	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Fixed minor number calculation for character devices - this was
	  preventing all tl880 /dev functions from working.
	* Added name field to tl880_dev.
	* Minor code cleaning.
	* Added /proc entry.
	* Renamed board_type to card_type in tl880_dev.
	* Fixed freeing of irq (use pcidev->irq instead of tl880dev->irq for
	  safety - also make sure tl880dev->irq = pcidev->irq).
	* Fixed /dev accesses - file->private_data is unavailable in cdev, so
	  we use file->f_dentry->inode to get the minor number and FUNC_MASK
	  to identify the mmap/ioctl needed.

2005-11-14	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Changed workqueue stuff to use tasklets.
	* Other 2.6 compile/run fixes.
	* Added request_module call for i2c-dev.
	* Changed tl880i2c.c to bind with new i2c drivers (I2C_CLASS_*).
	* Clean up some old 2.4-specific code.

2005-11-08	Mike Bourgeous		<i_am_nitrogen at hotmail.com>
	
	* Modified driver/Makefile for kernel 2.6.
	* Updated driver code to compile on kernel 2.6.
	* Started rewriting driver to use the kernel's PCI device system
	  rather than manually probing the PCI bus.

2003-10-06	Mike Bourgeous		<nitrogen at slimetech.com>

	* Added dpc2rand.sh and dpc2dump.sh tools.
	* Added more information to tl880doc.txt about DPC2 (0x10180,0x10184).
	* Added audio buffer setting code to tl880audio.c.
	* Added some DPC2 init code to tl880init.c.
	* Correct DPC2 init code for color conversion matrix in RGB mode.

2003-10-04	Mike Bourgeous		<nitrogen at slimetech.com>

	* Improved cursor test tool (incl. color palette support).